# SpeechToCommandFRC

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/speech_to_command_frc/: __init__.py  app.py  config.py  matcher.py  networktables.py  speech.py
static/: app.js  index.html  styles.css
tests/: test_matcher.py
